Resolve search issue #199